# youtube-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  generate_thumbnail_g33k.py  procesar_episodio.py  pyproject.toml
config/: settings.py  thumbnail_style_guide.json
scripts/: run_cron.sh
src/ai/: chapter_generator.py  content_generator.py  gemini_client.py  thumbnail_generator.py
src/notifications/: __init__.py  telegram.py
src/storage/: file_manager.py  state_tracker.py
src/transcription/: extractor.py  formatter.py
src/utils/: logger.py  retry.py
src/youtube/: auth.py  caption_uploader.py  detector.py  video_manager.py
